# cookiecutter-qtapp

./: cookiecutter.json  readme.md
{{cookiecutter.project_name}}/: .gitignore  CMakeLists.txt  app.rc.in  application.rc.in  mainwindow.ui  readme.md
